_sass/components/_clipboard.scss
//
// Clipboard
// --------------------------------------------------


.clipboard {
  display: flex;
  justify-content: end;

  .button-clipboard {
    position: absolute;
    font-size: 70%;
    padding: .25rem .3125rem;
    background-color: transparent;
    z-index: 9;

    &:hover {
      background-color: $principal-color;
    }
    &:focus {
      box-shadow: none;
    }
  }

  @include breakpoint-max($tablet-size - 1) {
    display: none;
  }
}

